@@ -42,10 +42,11 @@
 		* Support axes auto tick number and improve range auto scaling
 		* Optional showing axis scale and offset in plot
 		* Add inverse axis scale
+		* Add first tick offset to better place axis ticks
 		* Rug plot - visualization where the data points are displayed as marks along the axes
 		* Tufte's "range frames" - a new mode in Axis to automatically set the start and end points of the axis to the min and max data points
 		* Allow to specify which curves should be shown in the plot legend
-		* Switch to poppler for better LaTeX typesetting support
+		* Switched to Poppler for better LaTeX typesetting support
 
 Bug fixes:
 	* Fitting: Fix missing locale support in evaluating range of fit function
